--- a/ReenbitTest.UI/Components/ChatsComponent.razor
+++ b/ReenbitTest.UI/Components/ChatsComponent.razor
@@ -45,40 +45,51 @@
                 <MudListItem OnClick="@(() => SelectChat(chat))" 
                             Class="@($"chat-list-item {GetChatItemClass(chat.Id)}")" 
                             Dense="true">
-                    <div class="d-flex flex-column w-100 py-1">
-                        <div class="d-flex justify-space-between align-center">
-                            <MudText Typo="Typo.body2" Class="mud-text-truncate chat-name">
-                                @chat.Name
-                            </MudText>
-                            @if (chat.UnreadCount > 0)
-                            {
-                                <MudBadge Color="Color.Secondary" 
-                                        Content="@chat.UnreadCount" 
-                                        Overlap="true" 
-                                        Max="99" 
-                                        Class="unread-badge">
-                                </MudBadge>
-                            }
+                    <div class="d-flex flex-row">
+                        <div class="d-flex flex-column w-100 py-1">
+                            <MudAvatar Icon="@Icons.Material.Filled.Chat" 
+                                    Color="Color.Primary" 
+                                    Size="Size.Medium" 
+                                    Class="mr-2" >
+                                @chat.Name[0].ToString().ToUpper()
+                            </MudAvatar>
                         </div>
-                        @{
-                            var typingUsersInChat = _typingUsers.Where(t => t.ChatRoomId == chat.Id)
-                                                            .Select(t => t.UserName)
-                                                            .Distinct()
-                                                            .ToList();
-                        }
-                        
-                        <MudText Typo="Typo.caption" Class="mud-text-truncate" Style="opacity: 0.7;">
-                            @if (typingUsersInChat.Count > 0)
-                            {
-                                @GetTypingText(typingUsersInChat)
+                        <div class="d-flex flex-column w-100 py-1">
+                            <div class="d-flex justify-space-between align-center">
+                                <MudText Typo="Typo.body2" Class="mud-text-truncate chat-name">
+                                    @chat.Name
+                                </MudText>
+                                @if (chat.UnreadCount > 0)
+                                {
+                                    <MudBadge Color="Color.Secondary" 
+                                            Content="@chat.UnreadCount" 
+                                            Overlap="true" 
+                                            Max="99" 
+                                            Class="unread-badge">
+                                    </MudBadge>
+                                }
+                            </div>
+                            @{
+                                var typingUsersInChat = _typingUsers.Where(t => t.ChatRoomId == chat.Id)
+                                                                .Select(t => t.UserName)
+                                                                .Distinct()
+                                                                .ToList();
                             }
-                            else
-                            {
-                                @GetLastMessagePreview(chat)
-                            }
-                        </MudText>
+                            
+                            <MudText Typo="Typo.caption" Class="mud-text-truncate" Style="opacity: 0.7;">
+                                @if (typingUsersInChat.Count > 0)
+                                {
+                                    @GetTypingText(typingUsersInChat)
+                                }
+                                else
+                                {
+                                    @GetLastMessagePreview(chat)
+                                }
+                            </MudText>
+                        </div>
                     </div>
                 </MudListItem>
+                <MudDivider />
             }
         </MudList>
     }
